RESOLVED FIXED308657
Nested children of popover fail to render when position:absolute
https://bugs.webkit.org/show_bug.cgi?id=308657
Summary Nested children of popover fail to render when position:absolute
MekalaA
Reported 2026-02-25 11:06:25 PST
Description: When elements are nested in popover with position:absolute, they fail to render completely. Some of the deep nested children elements are rendered but the first level child element fails to load background-color like an unfinished paint. Expected: All elements wrapped in popover renders completely. Reproduction: 1. live reproduction: https://developers.arcgis.com/calcite-design-system/components/input-date-picker/ 2. Scroll to the component sample section. 3. Click on input to open date-picker. 4. observe date-picker background is still transparent & year select menu is missing value where as day's are rendered. 5. hover on to the date-picker, observe date-picker is repainted and all elements are rendered. Workaround: - Setting overlay-position to `absolute` which translates to position:absolute on the popover element fix the issue. - Workaround sample: https://codepen.io/anvesh-mekala/pen/jEMEOXx
Attachments
Patch (8.45 KB, patch)
2026-03-25 17:21 PDT, alan
no flags
Patch (8.47 KB, patch)
2026-03-26 08:41 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (8.46 KB, patch)
2026-03-26 08:56 PDT, alan
no flags
MekalaA
Comment 1 2026-02-25 11:51:31 PST
(In reply to MekalaA from comment #0) > Workaround: > Setting overlay-position to `absolute` which translates to position:absolute on the popover element fix the issue. [Edit] Setting overlay-position to `fixed` which translates to position:fixed on the popover element fixes the issue.
Radar WebKit Bug Importer
Comment 2 2026-03-04 11:07:11 PST
Karl Dubost
Comment 3 2026-03-16 05:19:39 PDT
Hello MekalaA I tried again today on STP 238. and there is no issue. Or did the website change?
Mel
Comment 4 2026-03-20 11:17:33 PDT
Hi Karl, I added the example MekalaA was referring to in this codepen. https://codepen.io/DintaMel-the-lessful/pen/dPpzZod?editors=100 I'm still seeing the transparent background as well as the missing value for the month select menu and the missing days of the week.
Simon Fraser (smfr)
Comment 5 2026-03-23 17:35:04 PDT
Autospade says this regressed at 295968@main. I can reproduce.
Karl Dubost
Comment 6 2026-03-23 17:50:56 PDT
Excellent I have been able to reproduce too, but not all the time. Interesting. And sometimes it looks like slow painting, as after a little while the rendering is correct.
Simon Fraser (smfr)
Comment 7 2026-03-23 17:55:42 PDT
It's always bad the first time. Reloading makes it happen again.
alan
Comment 8 2026-03-25 17:21:17 PDT
alan
Comment 9 2026-03-26 08:41:10 PDT
alan
Comment 10 2026-03-26 08:56:06 PDT
Created attachment 478815 [details] [fast-cq]Patch
EWS
Comment 11 2026-03-26 14:03:03 PDT
Committed 310019@main (5761cdbb640c): <https://commits.webkit.org/310019@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478815 [details].
Note You need to log in before you can comment on or make changes to this bug.